# ChessTwo

./: .gitignore  Board.cpp  Board.h  CMakeLists.txt  ChessTwo.sln  ChessTwo.vcxproj  ChessTwo.vcxproj.filters  ChessWindow.cpp  ChessWindow.h  Piece.cpp  Piece.h  README.md  Rook.cpp  Rook.h  main.cpp
src/: Bishop.cpp  Bishop.h  Board.cpp  Board.h  ChessWindow.cpp  ChessWindow.h  Context.cpp  Context.h  Game.cpp  Game.h  IMoveBehavior.h  IMoveBehaviour.h  King.cpp  King.h  Knight.cpp  Knight.h  MyMaths.cpp  MyMaths.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Player.cpp  Player.h  Queen.cpp  Queen.h  Renderer.cpp  Renderer.h  Rook.cpp  Rook.h  RookMoveBehaviour.cpp  RookMoveBehaviour.h  SearchAlgos.cpp  SearchAlgos.h  main.cpp
src/backup/: Pawn.cpp  Pawn.h  Queen.h  Rook.cpp
